@@ -4,6 +4,7 @@
 
 * Hide the window when the app goes to background to protect against caching screenshots of the screen. To test just double click the home button.
 * Added TestFlight checkpoints to see how users are testing the app.
+* Added Pinview (0000) whenever the app comes to foreground
 
 ## About View
 * Added shadow and font changes to about text
